# libsc

./: CMakeLists.txt
cmake/: install.cmake  pkgconf.cmake  pkgconf.pc.in
